--- a/trangchu.html
+++ b/trangchu.html
@@ -139,7 +139,7 @@
             2021 Bản quyền thuộc về FreeezeVN.
             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://wwư.pinterest.com"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="https://www.pinterest.com"><i class="fa-brands fa-pinterest"></i></a>
             <a href="#logo" class="go_top">
                 <img src="./images/top.png" alt="Về đầu trang" height="100px">
             </a>
