--- a/dangnhap.html
+++ b/dangnhap.html
@@ -56,12 +56,12 @@
 
       <label for="email">
         <i class="fa-solid fa-envelope"></i>
-        <input name="email" id="email" type="text" placeholder="Nhập email">
+        <input name="email" id="email" type="text" placeholder="Nhập email" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
       </label>
 
       <label for="pass">
         <i class="fa-solid fa-key"></i>
-        <input name="pass" id="pass" type="password" placeholder="Nhập mật khẩu">
+        <input name="pass" id="pass" type="password" placeholder="Nhập mật khẩu" minlength="8">
       </label>
 
       <p>
@@ -88,6 +88,8 @@
       </a>
     </p>
   </footer>
+
+  <script src="./js/form.js"></script>
 </body>
 
 </html>
