--- a/sanpham.html
+++ b/sanpham.html
@@ -56,12 +56,11 @@
           <div class="item">
             Hương vị thơm ngon của trái Kiwi xanh, nổi tiếng của đất nước New Zealand có trong Sữa chua vị Kiwi xanh đem
             đến một món ăn nhẹ Siêu ngon và tốt cho hệ tiêu hóa. <a href="#">Xem chi tiết</a>.
-            <div class="buy">Số Lượng: <input type="number" name="kiwi" id="kiwi" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+            <div class="buy">Số Lượng: <input type="number" name="kiwi" id="sp001" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp001')">Đặt hàng</button>
             </div>
           </div>
       </section>
-
 
       <section>
         <img src="./images/sanpham/mango.jpg" alt="Xoài">
@@ -71,8 +70,8 @@
             ăn thơm ngon, bổ dưỡng này. <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="xoai" id="xoai" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="xoai" id="sp002" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp002')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -86,8 +85,8 @@
             xuyên sẽ có làn da mịn màng. <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="dualuoi" id="dualuoi" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="dualuoi" id="sp003" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp003')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -104,8 +103,8 @@
             toàn thế giới. Có nhiều loại, bao gồm đen, tím và vàng. <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="mamxoi" id="mamxoi" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="mamxoi" id="sp004" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp004')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -119,8 +118,8 @@
             có nhiều lông tơ và kích thước lá có thể khác nhau ở từng giống. <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="dautay" id="dautay" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="dautay" id="sp005" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp005')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -133,8 +132,8 @@
             chất hỗ trợ rất tốt cho sức khỏe của tim). <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="vietquat" id="vietquat" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="vietquat" id="sp006" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp006')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -151,8 +150,8 @@
             nhiều từ điển ở Việt Nam lại dịch thành grapefruit. <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="buoi" id="buoi" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="buoi" id="sp007" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp007')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -165,8 +164,8 @@
             còn giúp quá trình giải độc gan và hệ tiêu hóa. <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="taoxanh" id="taoxanh" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="taoxanh" id="sp008" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp008')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -179,8 +178,8 @@
             cây bản địa của các nước Nam Mỹ. <a href="#">Xem chi tiết</a>.
             <div class="buy">
               Số Lượng:
-              <input type="number" name="dua" id="dua" max="100" min="0" value="0" size="3">
-              <button>Đặt hàng</button>
+              <input type="number" name="dua" id="sp009" max="100" min="0" value="0" size="3">
+              <button onclick="addCart('sp009')">Đặt hàng</button>
             </div>
           </div>
       </section>
@@ -198,6 +197,8 @@
       </a>
     </p>
   </footer>
+
+  <script src="./js/sanpham.js"></script>
 </body>
 
 </html>
