--- a/trangchu.html
+++ b/trangchu.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/trangchu.css">
     <title>Trang chủ</title>
+    <script src="./lib/jquery/jquery.js"></script>
 </head>
 
 <body>
